parser.automaton
State 0:
toplevel' -> . toplevel [ # ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On IF shift to state 4
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On toplevel shift to state 31
-- On PExpr shift to state 7
-- On ORExpr shift to state 9
-- On MExpr shift to state 21
-- On LTExpr shift to state 22
-- On IfExpr shift to state 23
-- On Expr shift to state 32
-- On ANDExpr shift to state 13
-- On AExpr shift to state 16

State 1:
AExpr -> TRUE . [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE AND ]
-- On THEN reduce production AExpr -> TRUE 
-- On SEMISEMI reduce production AExpr -> TRUE 
-- On RPAREN reduce production AExpr -> TRUE 
-- On PLUS reduce production AExpr -> TRUE 
-- On OR reduce production AExpr -> TRUE 
-- On MULT reduce production AExpr -> TRUE 
-- On LT reduce production AExpr -> TRUE 
-- On ELSE reduce production AExpr -> TRUE 
-- On AND reduce production AExpr -> TRUE 

State 2:
AExpr -> LPAREN . Expr RPAREN [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On IF shift to state 4
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On PExpr shift to state 7
-- On ORExpr shift to state 9
-- On MExpr shift to state 21
-- On LTExpr shift to state 22
-- On IfExpr shift to state 23
-- On Expr shift to state 29
-- On ANDExpr shift to state 13
-- On AExpr shift to state 16

State 3:
AExpr -> INTV . [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE AND ]
-- On THEN reduce production AExpr -> INTV 
-- On SEMISEMI reduce production AExpr -> INTV 
-- On RPAREN reduce production AExpr -> INTV 
-- On PLUS reduce production AExpr -> INTV 
-- On OR reduce production AExpr -> INTV 
-- On MULT reduce production AExpr -> INTV 
-- On LT reduce production AExpr -> INTV 
-- On ELSE reduce production AExpr -> INTV 
-- On AND reduce production AExpr -> INTV 

State 4:
IfExpr -> IF . Expr THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On IF shift to state 4
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On PExpr shift to state 7
-- On ORExpr shift to state 9
-- On MExpr shift to state 21
-- On LTExpr shift to state 22
-- On IfExpr shift to state 23
-- On Expr shift to state 24
-- On ANDExpr shift to state 13
-- On AExpr shift to state 16

State 5:
AExpr -> ID . [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE AND ]
-- On THEN reduce production AExpr -> ID 
-- On SEMISEMI reduce production AExpr -> ID 
-- On RPAREN reduce production AExpr -> ID 
-- On PLUS reduce production AExpr -> ID 
-- On OR reduce production AExpr -> ID 
-- On MULT reduce production AExpr -> ID 
-- On LT reduce production AExpr -> ID 
-- On ELSE reduce production AExpr -> ID 
-- On AND reduce production AExpr -> ID 

State 6:
AExpr -> FALSE . [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE AND ]
-- On THEN reduce production AExpr -> FALSE 
-- On SEMISEMI reduce production AExpr -> FALSE 
-- On RPAREN reduce production AExpr -> FALSE 
-- On PLUS reduce production AExpr -> FALSE 
-- On OR reduce production AExpr -> FALSE 
-- On MULT reduce production AExpr -> FALSE 
-- On LT reduce production AExpr -> FALSE 
-- On ELSE reduce production AExpr -> FALSE 
-- On AND reduce production AExpr -> FALSE 

State 7:
LTExpr -> PExpr . LT PExpr [ THEN SEMISEMI RPAREN ELSE ]
LTExpr -> PExpr . [ THEN SEMISEMI RPAREN ELSE ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS LT ELSE ]
-- On PLUS shift to state 8
-- On LT shift to state 19
-- On THEN reduce production LTExpr -> PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr 
-- On RPAREN reduce production LTExpr -> PExpr 
-- On ELSE reduce production LTExpr -> PExpr 

State 8:
PExpr -> PExpr PLUS . MExpr [ THEN SEMISEMI RPAREN PLUS LT ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On ORExpr shift to state 9
-- On MExpr shift to state 10
-- On ANDExpr shift to state 13
-- On AExpr shift to state 16

State 9:
MExpr -> ORExpr . [ THEN SEMISEMI RPAREN PLUS MULT LT ELSE ]
-- On THEN reduce production MExpr -> ORExpr 
-- On SEMISEMI reduce production MExpr -> ORExpr 
-- On RPAREN reduce production MExpr -> ORExpr 
-- On PLUS reduce production MExpr -> ORExpr 
-- On MULT reduce production MExpr -> ORExpr 
-- On LT reduce production MExpr -> ORExpr 
-- On ELSE reduce production MExpr -> ORExpr 

State 10:
MExpr -> MExpr . MULT AExpr [ THEN SEMISEMI RPAREN PLUS MULT LT ELSE ]
PExpr -> PExpr PLUS MExpr . [ THEN SEMISEMI RPAREN PLUS LT ELSE ]
-- On MULT shift to state 11
-- On THEN reduce production PExpr -> PExpr PLUS MExpr 
-- On SEMISEMI reduce production PExpr -> PExpr PLUS MExpr 
-- On RPAREN reduce production PExpr -> PExpr PLUS MExpr 
-- On PLUS reduce production PExpr -> PExpr PLUS MExpr 
-- On LT reduce production PExpr -> PExpr PLUS MExpr 
-- On ELSE reduce production PExpr -> PExpr PLUS MExpr 

State 11:
MExpr -> MExpr MULT . AExpr [ THEN SEMISEMI RPAREN PLUS MULT LT ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On AExpr shift to state 12

State 12:
MExpr -> MExpr MULT AExpr . [ THEN SEMISEMI RPAREN PLUS MULT LT ELSE ]
-- On THEN reduce production MExpr -> MExpr MULT AExpr 
-- On SEMISEMI reduce production MExpr -> MExpr MULT AExpr 
-- On RPAREN reduce production MExpr -> MExpr MULT AExpr 
-- On PLUS reduce production MExpr -> MExpr MULT AExpr 
-- On MULT reduce production MExpr -> MExpr MULT AExpr 
-- On LT reduce production MExpr -> MExpr MULT AExpr 
-- On ELSE reduce production MExpr -> MExpr MULT AExpr 

State 13:
ORExpr -> ANDExpr . OR ORExpr [ THEN SEMISEMI RPAREN PLUS MULT LT ELSE ]
ORExpr -> ANDExpr . [ THEN SEMISEMI RPAREN PLUS MULT LT ELSE ]
-- On OR shift to state 14
-- On THEN reduce production ORExpr -> ANDExpr 
-- On SEMISEMI reduce production ORExpr -> ANDExpr 
-- On RPAREN reduce production ORExpr -> ANDExpr 
-- On PLUS reduce production ORExpr -> ANDExpr 
-- On MULT reduce production ORExpr -> ANDExpr 
-- On LT reduce production ORExpr -> ANDExpr 
-- On ELSE reduce production ORExpr -> ANDExpr 

State 14:
ORExpr -> ANDExpr OR . ORExpr [ THEN SEMISEMI RPAREN PLUS MULT LT ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On ORExpr shift to state 15
-- On ANDExpr shift to state 13
-- On AExpr shift to state 16

State 15:
ORExpr -> ANDExpr OR ORExpr . [ THEN SEMISEMI RPAREN PLUS MULT LT ELSE ]
-- On THEN reduce production ORExpr -> ANDExpr OR ORExpr 
-- On SEMISEMI reduce production ORExpr -> ANDExpr OR ORExpr 
-- On RPAREN reduce production ORExpr -> ANDExpr OR ORExpr 
-- On PLUS reduce production ORExpr -> ANDExpr OR ORExpr 
-- On MULT reduce production ORExpr -> ANDExpr OR ORExpr 
-- On LT reduce production ORExpr -> ANDExpr OR ORExpr 
-- On ELSE reduce production ORExpr -> ANDExpr OR ORExpr 

State 16:
ANDExpr -> AExpr . AND ANDExpr [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE ]
ANDExpr -> AExpr . [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE ]
-- On AND shift to state 17
-- On THEN reduce production ANDExpr -> AExpr 
-- On SEMISEMI reduce production ANDExpr -> AExpr 
-- On RPAREN reduce production ANDExpr -> AExpr 
-- On PLUS reduce production ANDExpr -> AExpr 
-- On OR reduce production ANDExpr -> AExpr 
-- On MULT reduce production ANDExpr -> AExpr 
-- On LT reduce production ANDExpr -> AExpr 
-- On ELSE reduce production ANDExpr -> AExpr 

State 17:
ANDExpr -> AExpr AND . ANDExpr [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On ANDExpr shift to state 18
-- On AExpr shift to state 16

State 18:
ANDExpr -> AExpr AND ANDExpr . [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE ]
-- On THEN reduce production ANDExpr -> AExpr AND ANDExpr 
-- On SEMISEMI reduce production ANDExpr -> AExpr AND ANDExpr 
-- On RPAREN reduce production ANDExpr -> AExpr AND ANDExpr 
-- On PLUS reduce production ANDExpr -> AExpr AND ANDExpr 
-- On OR reduce production ANDExpr -> AExpr AND ANDExpr 
-- On MULT reduce production ANDExpr -> AExpr AND ANDExpr 
-- On LT reduce production ANDExpr -> AExpr AND ANDExpr 
-- On ELSE reduce production ANDExpr -> AExpr AND ANDExpr 

State 19:
LTExpr -> PExpr LT . PExpr [ THEN SEMISEMI RPAREN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On PExpr shift to state 20
-- On ORExpr shift to state 9
-- On MExpr shift to state 21
-- On ANDExpr shift to state 13
-- On AExpr shift to state 16

State 20:
LTExpr -> PExpr LT PExpr . [ THEN SEMISEMI RPAREN ELSE ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS ELSE ]
-- On PLUS shift to state 8
-- On THEN reduce production LTExpr -> PExpr LT PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr LT PExpr 
-- On RPAREN reduce production LTExpr -> PExpr LT PExpr 
-- On ELSE reduce production LTExpr -> PExpr LT PExpr 

State 21:
MExpr -> MExpr . MULT AExpr [ THEN SEMISEMI RPAREN PLUS MULT LT ELSE ]
PExpr -> MExpr . [ THEN SEMISEMI RPAREN PLUS LT ELSE ]
-- On MULT shift to state 11
-- On THEN reduce production PExpr -> MExpr 
-- On SEMISEMI reduce production PExpr -> MExpr 
-- On RPAREN reduce production PExpr -> MExpr 
-- On PLUS reduce production PExpr -> MExpr 
-- On LT reduce production PExpr -> MExpr 
-- On ELSE reduce production PExpr -> MExpr 

State 22:
Expr -> LTExpr . [ THEN SEMISEMI RPAREN ELSE ]
-- On THEN reduce production Expr -> LTExpr 
-- On SEMISEMI reduce production Expr -> LTExpr 
-- On RPAREN reduce production Expr -> LTExpr 
-- On ELSE reduce production Expr -> LTExpr 

State 23:
Expr -> IfExpr . [ THEN SEMISEMI RPAREN ELSE ]
-- On THEN reduce production Expr -> IfExpr 
-- On SEMISEMI reduce production Expr -> IfExpr 
-- On RPAREN reduce production Expr -> IfExpr 
-- On ELSE reduce production Expr -> IfExpr 

State 24:
IfExpr -> IF Expr . THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN ELSE ]
-- On THEN shift to state 25

State 25:
IfExpr -> IF Expr THEN . Expr ELSE Expr [ THEN SEMISEMI RPAREN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On IF shift to state 4
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On PExpr shift to state 7
-- On ORExpr shift to state 9
-- On MExpr shift to state 21
-- On LTExpr shift to state 22
-- On IfExpr shift to state 23
-- On Expr shift to state 26
-- On ANDExpr shift to state 13
-- On AExpr shift to state 16

State 26:
IfExpr -> IF Expr THEN Expr . ELSE Expr [ THEN SEMISEMI RPAREN ELSE ]
-- On ELSE shift to state 27

State 27:
IfExpr -> IF Expr THEN Expr ELSE . Expr [ THEN SEMISEMI RPAREN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 3
-- On IF shift to state 4
-- On ID shift to state 5
-- On FALSE shift to state 6
-- On PExpr shift to state 7
-- On ORExpr shift to state 9
-- On MExpr shift to state 21
-- On LTExpr shift to state 22
-- On IfExpr shift to state 23
-- On Expr shift to state 28
-- On ANDExpr shift to state 13
-- On AExpr shift to state 16

State 28:
IfExpr -> IF Expr THEN Expr ELSE Expr . [ THEN SEMISEMI RPAREN ELSE ]
-- On THEN reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On SEMISEMI reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On RPAREN reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On ELSE reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 

State 29:
AExpr -> LPAREN Expr . RPAREN [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE AND ]
-- On RPAREN shift to state 30

State 30:
AExpr -> LPAREN Expr RPAREN . [ THEN SEMISEMI RPAREN PLUS OR MULT LT ELSE AND ]
-- On THEN reduce production AExpr -> LPAREN Expr RPAREN 
-- On SEMISEMI reduce production AExpr -> LPAREN Expr RPAREN 
-- On RPAREN reduce production AExpr -> LPAREN Expr RPAREN 
-- On PLUS reduce production AExpr -> LPAREN Expr RPAREN 
-- On OR reduce production AExpr -> LPAREN Expr RPAREN 
-- On MULT reduce production AExpr -> LPAREN Expr RPAREN 
-- On LT reduce production AExpr -> LPAREN Expr RPAREN 
-- On ELSE reduce production AExpr -> LPAREN Expr RPAREN 
-- On AND reduce production AExpr -> LPAREN Expr RPAREN 

State 31:
toplevel' -> toplevel . [ # ]
-- On # accept toplevel

State 32:
toplevel -> Expr . SEMISEMI [ # ]
-- On SEMISEMI shift to state 33

State 33:
toplevel -> Expr SEMISEMI . [ # ]
-- On # reduce production toplevel -> Expr SEMISEMI 

